Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40844

Crash in javascript function (goes away when not iterating over foreach)

    XMLWordPrintable

Details

    • 4d07bf91ed2d36aee9178ef48508c16277fbb318 (qtdeclarative)

    Description

      I had one random crash that went away when changing

      function luminance() {
      var sum = 0;
      for (var k in arguments) {

      to

      function luminance() {
      var sum = 0;
      for (var k = 0; k < arguments.length; k++) {

      The ASAN backtrace with today's 5.3 master is (lines may be one or two lines off, i had some qdebugs in there)

      ASAN:SIGSEGV
      =================================================================
      ==13782==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000020 (pc 0x7f5b5ffb78b5 sp 0x7fff9f46c850 bp 0x7fff9f46c890 T0)
      #0 0x7f5b5ffb78b4 in QHash<QV4::InternalClassTransition, QV4::InternalClass*>::findNode(QV4::InternalClassTransition const&, unsigned int*) const /usr/include/x86_64-linux-gnu/qt5/QtCore/qhash.h:932
      #1 0x7f5b5ffb36d4 in QHash<QV4::InternalClassTransition, QV4::InternalClass*>::constFind(QV4::InternalClassTransition const&) const /usr/include/x86_64-linux-gnu/qt5/QtCore/qhash.h:909
      #2 0x7f5b5ffb36d4 in QV4::InternalClass::changeVTable(QV4::ManagedVTable const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4internalclass.cpp:252
      #3 0x7f5b5ffaeff8 in QV4::Managed::setVTable(QV4::ManagedVTable const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4managed.cpp:181
      #4 0x7f5b5ff76baf in ForEachIteratorObject /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4objectiterator_p.h:92
      #5 0x7f5b5ff76baf in QV4::ExecutionEngine::newForEachIteratorObject(QV4::ExecutionContext*, QV4::ObjectRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4engine.cpp:663
      #6 0x7f5b600f2725 in QV4::Runtime::foreachIterator(QV4::ExecutionContext*, QV4::ValueRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:636
      #7 0x7f5b600e1570 in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:437
      #8 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #9 0x7f5b6000e17f in QV4::ScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:421
      #10 0x7f5b600f8c28 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #11 0x7f5b600f8c28 in QV4::Runtime::callProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:938
      #12 0x7f5b600e0c3c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:369
      #13 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #14 0x7f5b6000f987 in QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:529
      #15 0x7f5b602acb65 in QV4::Object::call(QV4::CallData*) ../../include/QtQml/5.3.2/QtQml/private/../../../../../../../qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #16 0x7f5b602acb65 in QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::ValueRef, QV4::CallData*, bool*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:166
      #17 0x7f5b602ae003 in QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::ValueRef, bool*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:123
      #18 0x7f5b602c5db6 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding.cpp:259
      #19 0x7f5b602e1902 in QQmlAbstractBinding::setEnabled(bool, QFlags<QQmlPropertyPrivate::WriteFlag>) ../../include/QtQml/5.3.2/QtQml/private/../../../../../../../qtdeclarative/src/qml/qml/qqmlabstractbinding_p.h:118
      #20 0x7f5b602e1902 in QQmlObjectCreator::finalize(QQmlInstantiationInterrupt&) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1206
      #21 0x7f5b60197b6e in QQmlIncubatorPrivate::incubate(QQmlInstantiationInterrupt&) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlincubator.cpp:356
      #22 0x7f5b6019a357 in QQmlIncubationController::incubateFor(int) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlincubator.cpp:403
      #23 0x7f5b609a97e7 in QQuickWindowIncubationController::incubate() /home/tsdgeos_work/qt5/qtdeclarative/src/quick/items/qquickwindow.cpp:135
      #24 0x7f5b609a97e7 in QQuickWindowIncubationController::timerEvent(QTimerEvent*) /home/tsdgeos_work/qt5/qtdeclarative/src/quick/items/qquickwindow.cpp:118
      #25 0x7f5b610db3ab in QObject::event(QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2f33ab)
      #26 0x7f5b610abcdc in QCoreApplication::notify(QObject*, QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2c3cdc)
      #27 0x7f5b610ab9d4 in QCoreApplication::notifyInternal(QObject*, QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2c39d4)
      #28 0x7f5b611020cc in QTimerInfoList::activateTimers() (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x31a0cc)
      #29 0x7f5b611023f0 (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x31a3f0)
      #30 0x7f5b5e793e2c in g_main_context_dispatch (/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x48e2c)
      #31 0x7f5b5e7940d7 (/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x490d7)
      #32 0x7f5b5e79417b in g_main_context_iteration (/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x4917b)
      #33 0x7f5b611026bb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x31a6bb)
      #34 0x7f5b610abde1 in QCoreApplication::processEvents(QFlags<QEventLoop::ProcessEventsFlag>, int) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2c3de1)
      #35 0x7f5b636e9420 in qWait /usr/include/x86_64-linux-gnu/qt5/QtTest/qtestsystem.h:66
      #36 0x7f5b636e9420 in QuickTestResult::wait(int) /home/tsdgeos_work/qt5/qtdeclarative/src/qmltest/quicktestresult.cpp:570
      #37 0x7f5b636eccea in QuickTestResult::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) .moc/moc_quicktestresult_p.cpp:286
      #38 0x7f5b636ed016 in QuickTestResult::qt_metacall(QMetaObject::Call, int, void**) .moc/moc_quicktestresult_p.cpp:395
      #39 0x7f5b600cd95d in CallMethod /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:1133
      #40 0x7f5b600cfeae in CallPrecise /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:1385
      #41 0x7f5b600d0d2b in QV4::QObjectMethod::callInternal(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:1874
      #42 0x7f5b600f8c28 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #43 0x7f5b600f8c28 in QV4::Runtime::callProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:938
      #44 0x7f5b600e0c3c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:369
      #45 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #46 0x7f5b6000f987 in QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:529
      #47 0x7f5b600f8542 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #48 0x7f5b600f8542 in QV4::Runtime::callActivationProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:912
      #49 0x7f5b600e109c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:398
      #50 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #51 0x7f5b6000f987 in QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:529
      #52 0x7f5b600f8542 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #53 0x7f5b600f8542 in QV4::Runtime::callActivationProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:912
      #54 0x7f5b600e109c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:398
      #55 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #56 0x7f5b6000e17f in QV4::ScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:421
      #57 0x7f5b600f9b2c in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #58 0x7f5b600f9b2c in QV4::Runtime::callElement(QV4::ExecutionContext*, QV4::ValueRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:966
      #59 0x7f5b600e0978 in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:388
      #60 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #61 0x7f5b6000e17f in QV4::ScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:421
      #62 0x7f5b600f8542 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #63 0x7f5b600f8542 in QV4::Runtime::callActivationProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:912
      #64 0x7f5b600e109c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:398
      #65 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #66 0x7f5b6000f987 in QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:529
      #67 0x7f5b600f8542 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #68 0x7f5b600f8542 in QV4::Runtime::callActivationProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:912
      #69 0x7f5b600e109c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:398
      #70 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #71 0x7f5b6000f987 in QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:529
      #72 0x7f5b600f8542 in QV4::Object::call(QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #73 0x7f5b600f8542 in QV4::Runtime::callActivationProperty(QV4::ExecutionContext*, QV4::StringRef, QV4::CallDataRef) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:912
      #74 0x7f5b600e109c in QV4::Moth::VME::run(QV4::ExecutionContext*, unsigned char const*, void***) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:398
      #75 0x7f5b600e856d in QV4::Moth::VME::exec(QV4::ExecutionContext*, unsigned char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:738
      #76 0x7f5b6000f987 in QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:529
      #77 0x7f5b602acb65 in QV4::Object::call(QV4::CallData*) ../../include/QtQml/5.3.2/QtQml/private/../../../../../../../qtdeclarative/src/qml/jsruntime/qv4object_p.h:270
      #78 0x7f5b602acb65 in QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::ValueRef, QV4::CallData*, bool*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:166
      #79 0x7f5b601aded4 in QQmlBoundSignalExpression::evaluate(void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlboundsignal.cpp:289
      #80 0x7f5b601af616 in QQmlBoundSignal_callback(QQmlNotifierEndpoint*, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlboundsignal.cpp:416
      #81 0x7f5b6025dde6 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlnotifier.cpp:81
      #82 0x7f5b6014bb8a in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlengine.cpp:720
      #83 0x7f5b610da232 in QMetaObject::activate(QObject*, int, int, void**) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2f2232)
      #84 0x7f5b60136563 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:849
      #85 0x7f5b601347e2 in QAbstractDynamicMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) /usr/include/x86_64-linux-gnu/qt5/QtCore/5.3.0/QtCore/private/qobject_p.h:428
      #86 0x7f5b601347e2 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:978
      #87 0x7f5b601347e2 in QAbstractDynamicMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) /usr/include/x86_64-linux-gnu/qt5/QtCore/5.3.0/QtCore/private/qobject_p.h:428
      #88 0x7f5b601347e2 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:978
      #89 0x7f5b60182a98 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1322
      #90 0x7f5b601846e2 in QQmlPropertyPrivate::writeValueProperty(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1246
      #91 0x7f5b60185a0d in QQmlPropertyPrivate::writeBinding(QObject*, QQmlPropertyData const&, QQmlContextData*, QQmlJavaScriptExpression*, QV4::ValueRef, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1578
      #92 0x7f5b602c5f20 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding.cpp:266
      #93 0x7f5b602c6ded in QQmlBinding::update() /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding_p.h:105
      #94 0x7f5b602c6ded in QQmlBinding::expressionChanged(QQmlJavaScriptExpression*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding.cpp:327
      #95 0x7f5b6025dde6 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlnotifier.cpp:81
      #96 0x7f5b6014bb8a in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlengine.cpp:720
      #97 0x7f5b610da232 in QMetaObject::activate(QObject*, int, int, void**) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2f2232)
      #98 0x7f5b60136563 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:849
      #99 0x7f5b601347e2 in QAbstractDynamicMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) /usr/include/x86_64-linux-gnu/qt5/QtCore/5.3.0/QtCore/private/qobject_p.h:428
      #100 0x7f5b601347e2 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:978
      #101 0x7f5b601347e2 in QAbstractDynamicMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) /usr/include/x86_64-linux-gnu/qt5/QtCore/5.3.0/QtCore/private/qobject_p.h:428
      #102 0x7f5b601347e2 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:978
      #103 0x7f5b60182a98 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1322
      #104 0x7f5b601846e2 in QQmlPropertyPrivate::writeValueProperty(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1246
      #105 0x7f5b60185a0d in QQmlPropertyPrivate::writeBinding(QObject*, QQmlPropertyData const&, QQmlContextData*, QQmlJavaScriptExpression*, QV4::ValueRef, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1578
      #106 0x7f5b602c5f20 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding.cpp:266
      #107 0x7f5b602c6ded in QQmlBinding::update() /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding_p.h:105
      #108 0x7f5b602c6ded in QQmlBinding::expressionChanged(QQmlJavaScriptExpression*) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlbinding.cpp:327
      #109 0x7f5b6025dde6 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlnotifier.cpp:81
      #110 0x7f5b6014bb8a in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) /home/tsdgeos_work/qt5/qtdeclarative/src/qml/qml/qqmlengine.cpp:720
      #111 0x7f5b610da232 in QMetaObject::activate(QObject*, int, int, void**) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2f2232)
      #112 0x7f5b636e3c2b in QTestRootObject::windowShownChanged() .moc/quicktest.moc:187
      #113 0x7f5b636e3c2b in QTestRootObject::setWindowShown(bool) /home/tsdgeos_work/qt5/qtdeclarative/src/qmltest/quicktest.cpp:103
      #114 0x7f5b636e3c2b in quick_test_main(int, char*, char const, char const*) /home/tsdgeos_work/qt5/qtdeclarative/src/qmltest/quicktest.cpp:375
      #115 0x7f5b62455ec4 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21ec4)
      #116 0x400763 (/home/tsdgeos_work/qt5/build/qtdeclarative/bin/qmltestrunner+0x400763)

      Attachments

        For Gerrit Dashboard: QTBUG-40844
        # Subject Branch Project Status CR V

        Activity

          People

            shausman Simon Hausmann
            tsdgeos_canonical Albert Astals Cid (Canonical) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes